<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ui.games.GamesFragment">


    <Button
        android:id="@+id/button"
        android:layout_width="163dp"
        android:layout_height="166dp"
        android:layout_marginStart="16dp"
        android:drawableTop="@drawable/ic_anagram2"
        android:fontFamily="serif"
        android:text="@string/anagram"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <Button
        android:id="@+id/button1"
        android:layout_width="167dp"
        android:layout_height="171dp"
        android:layout_marginStart="204dp"
        android:drawableTop="@drawable/ic_tqm"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/word"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="313dp"
        android:layout_height="181dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="140dp"
        android:gravity="center"
        android:text="@string/games_for_you"
        android:textColor="#FC050505"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="349dp"
        android:layout_height="141dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="38dp"
        android:gravity="center"
        android:text="@string/gameinfo"
        android:textColor="#F80A0A0A"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
