<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".Gm_Anagram">

        <TextView
            android:id="@+id/wordTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/word_to_find"
            android:textColor="#FA0A0A0A"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.132" />

        <EditText
            android:id="@+id/wordEnteredEt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/wordTv"
            android:layout_centerHorizontal="true"
            android:autofillHints=""
            android:inputType="textCapCharacters"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.236"
            tools:targetApi="o" />

        <Button
            android:id="@+id/validate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/wordEnteredEt"
            android:layout_centerHorizontal="true"
            android:text="@string/validate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />

        <Button
            android:id="@+id/newGame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/validate"
            android:layout_centerHorizontal="true"
            android:text="@string/new_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53" />

</androidx.constraintlayout.widget.ConstraintLayout>